--- a/springboot/fileServer/pom.xml
+++ b/springboot/fileServer/pom.xml
@@ -42,6 +42,7 @@
         <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
+            <version>1.18.12</version>
         </dependency>
         <!--thymeleaf-->
         <dependency>
