--- a/fileStorage/src/main/resources/application.yaml
+++ b/fileStorage/src/main/resources/application.yaml
@@ -1,6 +1,6 @@
 spring:
   application:
-    name: fileServer
+    name: fileStorage
   thymeleaf:
     cache: false
   datasource:
@@ -13,13 +13,13 @@ spring:
 server:
   port: 8080
   servlet:
-    context-path: /fileServer
+    context-path: /fileStorage
 
 
 mybatis:
   mapper-locations: classpath:mybatis/mapper/*.xml
 
-  type-aliases-package: com.yhao.fileserver.entity
+  type-aliases-package: com.yhao.fileStorage.entity
 
 logging:
   level:
